--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.47"
+        "symfony/maker-bundle": "^1.47",
+        "zenstruck/foundry": "^1.22"
     }
 }
